# quickserving

./: .gitignore  Cargo.toml  DOCS.md  README.md
docs/: docs.md  routes.md
src/: config.rs  lib.rs  main.rs  qlib.rs  request.rs  response.rs  server.rs
src/config/: mod.rs
src/http/: headers.rs  method.rs  mod.rs  request.rs  response.rs  server.rs  status.rs  version.rs
src/logging/: mod.rs
