[package]
name = "quickserving"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama_axum = "0.4.0"
axum = { version = "0.7.4" }
serde = "1.0.196"
serde_derive = "1.0.196"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
toml = "0.8.8"
tower-http = "0.5.1"
