[package]
name = "quickserving"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
clap = { version = "4.5.4", features = ["derive"] }
log = "0.4.21"
simple_logger = "5.0.0"
tokio = { version = "1.37.0", features = ["full"] }